<resources>
    <!-- APP -->
    <string name="app_name">Quiz</string>

    <!-- Main -->
    <string name="mainTextUsuarioLogin">Usuario</string>
    <string name="mainTextPassLogin">Contraseña</string>
    <string name="mainButtonLogin">LOGIN</string>
    <string name="mainTextRegistrar">REGISTRAR</string>
    <string name="mainButtonRegistrar">REGISTRAR</string>
    <string name="mainTextUsuarioRegistrar">Usuario</string>
    <string name="mainTextPassRegistrar">Contraseña</string>
    <string name="mainTextEmailRegistrar">Email</string>
    <string name="mainTextGeneroRegistrar">Género</string>

    <!-- Levels  -->
    <string name="openToggle">Abierto drawer navegacion</string>
    <string name="closeToggle">Cerrado drawer navegacion</string>

    <!-- Menu Navigation Levels  -->
    <string name="ajustes_menu">Ajustes</string>
    <string name="score_menu">Puntuación</string>
    <string name="about_us_menu">Sobre nosotros</string>

    <!-- Ready  -->
    <string name="readyButton">READY</string>
    <string name="iniReady">Estamos en Ready</string>

    <!-- Test  -->
    <string name="levelsButton1">Nivel 1</string>
    <string name="levelsButton2">Nivel 2</string>
    <string name="levelsButton3">Nivel 3</string>
    <string name="levelsButton4">Nivel 4</string>
    <string name="levelsButton5">Nivel 5</string>
    <string name="levelsButton6">Nivel 6</string>
    <string name="levelsButton7">Nivel 7</string>
    <string name="levelsButton8">Nivel 8</string>
    <string name="levelsButton9">Nivel 9</string>
    <string name="levelsButton10">Nivel 10</string>
    <string name="play_button">PLAY</string>

    <!-- Result -->
    <string name="estadisticas">Estadísticas</string>
    <string name="totalPreguntas">Total preguntas: </string>
    <string name="correctasPreguntas">Correctas: </string>
    <string name="incorrectasPreguntas">Incorrectas: </string>
    <string name="volver">Volver al inicio</string>
    <string name="title_activity_score">Score</string>

    <!-- Score -->
    <string name="nivel1">Nivel 1</string>
    <string name="nivel2">Nivel 2</string>
    <string name="nivel3">Nivel 3</string>
    <string name="nivel4">Nivel 4</string>
    <string name="nivel5">Nivel 5</string>
    <string name="nivel6">Nivel 6</string>
    <string name="nivel7">Nivel 7</string>
    <string name="nivel8">Nivel 8</string>
    <string name="nivel9">Nivel 9</string>
    <string name="nivel10">Nivel 10</string>

    <string name="Opciones">Opciones</string>
</resources>
