<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gidw.luis.quiz.LevelsActivity"
    tools:showIn="@layout/appbar_navigation_levels">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/levelsButton1"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#f0eb79"
                android:paddingTop="25dp"
                android:text="@string/levelsButton1"
                android:textAllCaps="false"
                android:textColor="#2f2e2e"
                android:textSize="30sp" />
            <Button
                android:id="@+id/levelsButton2"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#524d47"
                android:paddingTop="25dp"
                android:text="@string/levelsButton2"
                android:textAllCaps="false"
                android:textColor="#2f2e2e"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/levelsButton3"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#524d47"
                android:paddingTop="25dp"
                android:text="@string/levelsButton3"
                android:textAllCaps="false"
                android:textColor="#2f2e2e"
                android:textSize="30sp" />
            <Button
                android:id="@+id/levelsButton4"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#f0eb79"
                android:paddingTop="25dp"
                android:text="@string/levelsButton4"
                android:textAllCaps="false"
                android:textColor="#2f2e2e"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/levelsButton5"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#f0eb79"
                android:paddingTop="25dp"
                android:text="@string/levelsButton5"
                android:textAllCaps="false"
                android:textColor="#2f2e2e"
                android:textSize="30sp" />
            <Button
                android:id="@+id/levelsButton6"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#524d47"
                android:paddingTop="25dp"
                android:text="@string/levelsButton6"
                android:textAllCaps="false"
                android:textColor="#2f2e2e"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/levelsButton7"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#524d47"
                android:paddingTop="25dp"
                android:text="@string/levelsButton7"
                android:textAllCaps="false"
                android:textColor="#2f2e2e"
                android:textSize="30sp" />
            <Button
                android:id="@+id/levelsButton8"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#f0eb79"
                android:paddingTop="25dp"
                android:text="@string/levelsButton8"
                android:textAllCaps="false"
                android:textColor="#2f2e2e"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/levelsButton9"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#f0eb79"
                android:paddingTop="25dp"
                android:text="@string/levelsButton9"
                android:textAllCaps="false"
                android:textColor="#2f2e2e"
                android:textSize="30sp" />
            <Button
                android:id="@+id/levelsButton10"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#524d47"
                android:paddingTop="25dp"
                android:text="@string/levelsButton10"
                android:textAllCaps="false"
                android:textColor="#2f2e2e"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>