<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainLogoRegistrar"
        android:layout_width="264dp"
        android:layout_height="228dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/quiz_logo" />

    <TextView
        android:id="@+id/mainTextUsuarioRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mainLogoRegistrar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-25dp"
        android:layout_marginBottom="349dp"
        android:text="@string/mainTextUsuarioRegistrar" />

    <EditText
        android:id="@+id/mainEditUsuarioRegistrar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mainLogoRegistrar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-25dp"
        android:layout_marginBottom="304dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/mainTextPassRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mainLogoRegistrar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-25dp"
        android:layout_marginBottom="268dp"
        android:text="@string/mainTextPassRegistrar" />

    <EditText
        android:id="@+id/mainEditPassRegistrar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mainLogoRegistrar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-25dp"
        android:layout_marginBottom="226dp"
        android:ems="10"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/mainTextEmailRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mainLogoRegistrar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-24dp"
        android:layout_marginBottom="193dp"
        android:text="@string/mainTextEmailRegistrar" />

    <EditText
        android:id="@+id/mainEditEmailRegistrar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mainLogoRegistrar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-24dp"
        android:layout_marginBottom="149dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/mainButtonRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:text="@string/mainButtonRegistrar" />

    <TextView
        android:id="@+id/mainTextGeneroRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mainLogoRegistrar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-23dp"
        android:layout_marginBottom="117dp"
        android:text="@string/mainTextGeneroRegistrar" />

    <Spinner
        android:id="@+id/mainSpinnerGeneroRegistrar"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="123dp"
        android:layout_marginBottom="114dp" />

</RelativeLayout>