<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundInical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainLogoLogin"
        android:layout_width="264dp"
        android:layout_height="228dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/logoint" />

    <TextView
        android:id="@+id/mainTextUsuarioLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mainLogoLogin"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-25dp"
        android:layout_marginBottom="349dp"
        android:text="@string/mainTextUsuarioLogin" />

    <EditText
        android:id="@+id/mainEditUsuarioLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mainLogoLogin"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-25dp"
        android:layout_marginBottom="304dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/mainTextPassLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mainLogoLogin"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-25dp"
        android:layout_marginBottom="258dp"
        android:text="@string/mainTextPassLogin" />

    <EditText
        android:id="@+id/mainEditPassLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mainLogoLogin"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-25dp"
        android:layout_marginBottom="215dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/mainButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="138dp"
        android:text="@string/mainButtonLogin" />

</RelativeLayout>