<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.gidw.luis.quiz.ScoreActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.gidw.luis.quiz.ScoreActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:text="@string/nivel1"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/scoreNivel1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bdbdbd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:text="@string/nivel2"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/scoreNivel2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bdbdbd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:text="@string/nivel3"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/scoreNivel3"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bdbdbd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:text="@string/nivel4"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/scoreNivel4"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bdbdbd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:text="@string/nivel5"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/scoreNivel5"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bdbdbd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:text="@string/nivel6"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/scoreNivel6"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bdbdbd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:text="@string/nivel7"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/scoreNivel7"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bdbdbd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:text="@string/nivel8"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/scoreNivel8"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bdbdbd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:text="@string/nivel9"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/scoreNivel9"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bdbdbd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:text="@string/nivel10"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/scoreNivel10"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
